--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -14,8 +14,9 @@
         app:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
 
     <FrameLayout
-        android:id="@+id/fragmentContainer"
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        />
 
 </LinearLayout>
