--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,13 +1,17 @@
 <resources>
 
     <!-- Font Sizes -->
-    <dimen name="text_large">25sp</dimen>
-    <dimen name="text_normal">20sp</dimen>
-    <dimen name="text_small">15sp</dimen>
+    <dimen name="text_large">32sp</dimen>
+    <dimen name="text_normal">16sp</dimen>
+    <dimen name="text_small">8sp</dimen>
 
     <!-- Padding Sizes -->
-    <dimen name="padding_small">5dp</dimen>
-    <dimen name="padding_normal">10dp</dimen>
-    <dimen name="padding_large">20dp</dimen>
+    <dimen name="padding_small">8dp</dimen>
+    <dimen name="padding_normal">16dp</dimen>
+    <dimen name="padding_large">32dp</dimen>
+
+    <!-- Margin Sizes -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 
 </resources>
