In a working state

--- a/app/src/main/res/layout/fragment_zoo.xml
+++ b/app/src/main/res/layout/fragment_zoo.xml
@@ -9,6 +9,30 @@
         android:id="@+id/fragment_zoo_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         />
+
+    <LinearLayout
+        android:id="@+id/fragment_zoo_empty_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/fragment_zoo_textview_empty"
+            style="@style/EmptyTextView"
+            />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:src="@android:drawable/ic_menu_add"
+            />
+
+    </LinearLayout>
 
 </RelativeLayout>
