--- a/app/src/main/res/layout/list_item_animal.xml
+++ b/app/src/main/res/layout/list_item_animal.xml
@@ -3,18 +3,17 @@
               xmlns:tools="http://schemas.android.com/tools"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
-              android:layout_height="?android:attr/listPreferredItemHeight"
+              android:layout_height="?android:attr/listPreferredItemHeightLarge"
               android:orientation="horizontal"
               android:padding="@dimen/padding_small"
               android:clickable="true"
               android:focusable="true"
-              android:background="?android:attr/selectableItemBackground">
+              android:background="@drawable/drawer_item_selector">
 
     <FrameLayout
         android:id="@+id/list_item_animal_icon"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:layout_marginRight="@dimen/padding_normal">
 
         <ImageView
@@ -40,9 +39,8 @@
     </FrameLayout>
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="4"
         android:orientation="vertical"
         android:gravity="center_vertical">
 
@@ -51,11 +49,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:textSize="@dimen/text_normal"
-            android:textStyle="bold"
             tools:text="Title"
+            style="@style/TitleTextView"
             />
 
         <TextView
@@ -63,10 +58,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:textSize="@dimen/text_normal"
             tools:text="Description"
+            style="@style/DescriptionTextView"
             />
 
     </LinearLayout>
