--- a/app/src/main/res/layout/activity_base_normal.xml
+++ b/app/src/main/res/layout/activity_base_normal.xml
@@ -5,16 +5,10 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:minHeight="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
+    <include layout="@layout/toolbar"/>
 
     <FrameLayout
-        android:id="@+id/container"
+        android:id="@+id/activity_base_normal_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
