--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -5,11 +5,12 @@
               android:layout_height="match_parent"
               tools:context=".AnimalActivity">
 
-    <ImageView
-        android:id="@+id/fragment_animal_image"
+    <TextView
+        android:id="@+id/fragment_about_description"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:src="@drawable/animal_lion"
+        android:gravity="center"
+        android:text="About"
         />
 
 </LinearLayout>
