--- a/app/src/main/res/layout/fragment_animal.xml
+++ b/app/src/main/res/layout/fragment_animal.xml
@@ -9,6 +9,7 @@
         android:id="@+id/fragment_animal_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:transitionName="@string/transition_animal_image"
         tools:src="@drawable/animal_lion"
         />
 
