--- a/app/src/main/res/layout/fragment_zoo.xml
+++ b/app/src/main/res/layout/fragment_zoo.xml
@@ -1,38 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context=".ZooActivity">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:context=".ZooActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragment_zoo_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
         />
 
-    <LinearLayout
-        android:id="@+id/fragment_zoo_empty_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+    <ImageButton
+        android:id="@+id/fragment_zoo_fab"
+        android:layout_width="@dimen/fab_diameter"
+        android:layout_height="@dimen/fab_diameter"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="@dimen/padding_large"
+        android:layout_marginRight="@dimen/padding_large"
+        android:background="@drawable/fab_ripple"
+        android:src="@android:drawable/ic_input_add"
+        android:tint="@android:color/white"
+        android:elevation="@dimen/elevation_low"
+        android:stateListAnimator="@anim/fab_elevation"
+        />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/fragment_zoo_textview_empty"
-            style="@style/EmptyTextView"
-            />
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:src="@android:drawable/ic_menu_add"
-            />
-
-    </LinearLayout>
-
-</RelativeLayout>
+</FrameLayout>
