--- a/app/src/main/res/layout/list_item_animal.xml
+++ b/app/src/main/res/layout/list_item_animal.xml
@@ -12,13 +12,14 @@
 
     <FrameLayout
         android:id="@+id/list_item_animal_icon"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:layout_marginRight="@dimen/padding_normal">
 
         <ImageView
             android:id="@+id/list_item_animal_image"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:adjustViewBounds="true"
@@ -30,7 +31,7 @@
 
         <ProgressBar
             android:id="@+id/list_item_animal_progress"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:visibility="gone"
@@ -40,8 +41,9 @@
     </FrameLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="3"
         android:orientation="vertical"
         android:gravity="center_vertical">
 
