--- a/app/src/main/res/drawable/drawer_item_selected.xml
+++ b/app/src/main/res/drawable/drawer_item_selected.xml
@@ -3,8 +3,8 @@
        android:shape="rectangle">
 
     <gradient
-        android:startColor="@color/primary_light"
-        android:endColor="@color/primary_light"
+        android:startColor="@color/primary"
+        android:endColor="@color/primary"
         android:angle="90"
         />
 
