Added long press support

--- a/app/src/main/res/drawable/list_item_selector.xml
+++ b/app/src/main/res/drawable/list_item_selector.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/drawer_item_normal"
+    <item android:drawable="@drawable/list_item_normal"
+          android:state_selected="false"
           android:state_pressed="false"/>
 
-    <item android:drawable="@drawable/drawer_item_pressed"
+    <item android:drawable="@drawable/list_item_pressed"
+          android:state_selected="false"
           android:state_pressed="true"/>
+
+    <item android:drawable="@drawable/list_item_selected"
+          android:state_selected="true"
+          android:state_pressed="true"/>
+
+    <item android:drawable="@drawable/list_item_selected"
+          android:state_selected="true"
+          android:state_pressed="false"/>
 
 </selector>
