--- a/app/src/main/res/layout/list_item_drawer.xml
+++ b/app/src/main/res/layout/list_item_drawer.xml
@@ -3,14 +3,17 @@
               xmlns:tools="http://schemas.android.com/tools"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
-              android:layout_height="?android:attr/listPreferredItemHeight"
+              android:layout_height="?android:attr/listPreferredItemHeightSmall"
+              android:orientation="horizontal"
+              android:padding="@dimen/padding_small"
+              android:elevation="@dimen/elevation_high"
               android:background="@drawable/drawer_item_selector">
 
     <ImageView
         android:id="@+id/list_item_drawer_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/padding_normal"
+        android:layout_marginRight="@dimen/padding_normal"
         android:layout_gravity="center"
         tools:src="@android:drawable/ic_menu_info_details"
         />
