--- a/app/src/main/res/layout/fragment_animal.xml
+++ b/app/src/main/res/layout/fragment_animal.xml
@@ -3,14 +3,26 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:orientation="vertical"
               tools:context=".AnimalActivity">
 
     <ImageView
         android:id="@+id/fragment_animal_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:transitionName="@string/transition_animal_image"
+        android:adjustViewBounds="true"
         tools:src="@drawable/animal_lion"
+        />
+
+    <TextView
+        android:id="@+id/fragment_animal_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="@dimen/padding_normal"
+        tools:text="Description"
+        style="@style/DescriptionTextView"
         />
 
 </LinearLayout>
