--- a/app/src/main/res/layout/fragment_zoo.xml
+++ b/app/src/main/res/layout/fragment_zoo.xml
@@ -24,6 +24,7 @@
         android:tint="@android:color/white"
         android:elevation="@dimen/elevation_low"
         android:stateListAnimator="@anim/fab_elevation"
+        android:clickable="false"
         android:visibility="invisible"
         tools:visibility="visible"
         />
